2014-10-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Fix memory leak.

	* src/nasl_plugins.c (nasl_thread): Don't set NASL_EXEC_DONT_CLEANUP
	mode.

2014-10-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginlaunch.c (process_internal_msg): In case of unexpected
	death, don't just report the PID which is mostly useless. Add the
	OID as well now.

2014-10-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Remove useless memory allocations and
	clean code.

	* src/pluginlaunch.c (process_internal_msg): Code style fix. Don't make
	variables static.

2014-10-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info), src/pluginscheduler.c (hash_add)
	(plugins_scheduler_init): Call nvticache_get_by_oid_full() instead of
	nvticache_get_by_oid().

2014-10-07  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin), src/comm.c (send_plug_info),
	src/nasl_plugins.c (nasl_plugin_add), src/pluginload.c
	(plugins_reload_from_dir), src/pluginscheduler.c (hash_add)
	(plugins_scheduler_init): Adjust for nvticache API changes.

2014-10-07  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Adjust for nvticache_get()
	changes as the returned nvti object is unnecessarily not cloned.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta3.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0+beta2 release.

	* CHANGES: Updated.

2014-09-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Remove libhiredis from the list of prerequisites since it
	is actually required by openvas-libraries and handled there.

2014-09-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Replace last old internal calls for memory management by respective
	glib functions.
